new jar added