@@ -5,13 +5,15 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
-import jakarta.servlet.http.Cookie;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
+import javax.servlet.http.Cookie;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CookieService {
@@ -26,13 +28,19 @@ public class CookieService {
 
     public void setCookie(String name, String value) {
         int expiresInSeconds = (6 * 60 * 60);
-        Cookie cookie = new Cookie(name, URLEncoder.encode(value, StandardCharsets.UTF_8));
-        cookie.setSecure(true);
-        cookie.setHttpOnly(true);
-        cookie.setDomain("localhost");
-        cookie.setPath("/");
-        cookie.setMaxAge(expiresInSeconds);
-        httpServletResponse.addCookie(cookie);
+        try {
+            Cookie cookie = new Cookie(name, URLEncoder.encode(value, "UTF-8"));
+            cookie.setPath("/");
+            cookie.setHttpOnly(true);
+            cookie.setSecure(true);
+            cookie.setHttpOnly(true);
+            cookie.setDomain("localhost");
+            cookie.setPath("/");
+            cookie.setMaxAge(expiresInSeconds);
+            httpServletResponse.addCookie(cookie);        } catch (UnsupportedEncodingException e) {
+            throw new RuntimeException("UTF-8 encoding not supported", e);
+        }
+
     }
 
     public void deleteCookie(String name) {
@@ -54,8 +62,9 @@ public class CookieService {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Товар в корзине не найден");
         }
 
-        List<Cookie> cookies = Arrays.stream(httpServletRequest.getCookies()).filter(c -> c.getName().equals(name)).toList();
-
+        List<Cookie> cookies = Arrays.stream(httpServletRequest.getCookies())
+                .filter(c -> c.getName().equals(name))
+                .collect(Collectors.toList());
         if (cookies.isEmpty()) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Товар в корзине не найден");
         }
